src/test/ui/traits/cycle-cache-err-60010.stderr
error[E0275]: overflow evaluating the requirement `SalsaStorage: RefUnwindSafe`
  --> $DIR/cycle-cache-err-60010.rs:27:13
   |
LL |     _parse: <ParseQuery as Query<RootDatabase>>::Data,
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: required because it appears within the type `*const SalsaStorage`
   = note: required because it appears within the type `Unique<SalsaStorage>`
   = note: required because it appears within the type `Box<SalsaStorage>`
note: required because it appears within the type `Runtime<RootDatabase>`
  --> $DIR/cycle-cache-err-60010.rs:23:8
   |
LL | struct Runtime<DB: Database> {
   |        ^^^^^^^
note: required because it appears within the type `RootDatabase`
  --> $DIR/cycle-cache-err-60010.rs:20:8
   |
LL | struct RootDatabase {
   |        ^^^^^^^^^^^^
note: required because of the requirements on the impl of `SourceDatabase` for `RootDatabase`
  --> $DIR/cycle-cache-err-60010.rs:44:9
   |
LL | impl<T> SourceDatabase for T
   |         ^^^^^^^^^^^^^^     ^
note: required because of the requirements on the impl of `Query<RootDatabase>` for `ParseQuery`
  --> $DIR/cycle-cache-err-60010.rs:37:10
   |
LL | impl<DB> Query<DB> for ParseQuery
   |          ^^^^^^^^^     ^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0275`.
